Fix ClangFormat errors